[metadata]
name = oq2csep
description = OpenQuake Source Model reader and interface to pyCSEP
long_description = file: README.md
long_description_content_type = text/markdown
author = Pablo Iturrieta
author_email = pciturri@gfz-potsdam.de
license = BSD 3-Clause License
version = 0.1.1
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/pabloitu/oq2pycsep.git

[options]
packages =
    oq2csep
install_requires =
    numpy
    pycsep
    openquake.engine
    pandas
    geopandas
    matplotlib
    cartopy
    shapely
python_requires = >=3.8
zip_safe = no

[options.packages.find]
include = oq2csep*

[options.extras_require]
dev =
    numpy
    pycsep
    openquake.engine
    pytest-cov
    sphinx
    sphinx-autoapi
    sphinx-gallery
    sphinx-rtd-theme
    tox
    pandas
    geopandas
    matplotlib
    cartopy
    shapely
[options.entry_points]
console_scripts =
    oq2csep = oq2csep.cmd.main:oq2csep

[flake8]
max-line-length = 79