[metadata]
name = hazard2csep
description = pyCSEP reader and interface to OpenQuake Source Model files
long_description = file: README.md
long_description_content_type = text/markdown
author = Pablo Iturrieta
author_email = pciturri@gfz-potsdam.de
license = BSD 3-Clause License
version = 0.1.1
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/cseptesting/hazard2csep.git

[options]
packages =
    hazard2csep
    hazard2csep.cmd
install_requires =
    numpy
    pycsep
    openquake.engine
    pandas
    geopandas
    matplotlib
    cartopy
    shapely
python_requires = >=3.8
zip_safe = no

[options.packages.find]
include = hazard2csep*

[options.extras_require]
dev =
    numpy
    pycsep
    openquake.engine
    pytest-cov
    sphinx
    sphinx-autoapi
    sphinx-gallery
    sphinx-rtd-theme
    tox
    pandas
    geopandas
    matplotlib
    cartopy
    shapely
[options.entry_points]
console_scripts =
    hazard2csep = hazard2csep.cmd.main:hazard2csep

[flake8]
max-line-length = 79